--- a/index.html
+++ b/index.html
@@ -2,12 +2,37 @@
 
 <html>
 <head>
-<meta charset="utf-8">
-<title>FLOATと表</title>
-<link rel="stylesheet" href="css/default.css" type="text/css">
+　<meta charset="utf-8">
+　<title>可変グリッドレイアウト</title>
+　<link rel="stylesheet" href="css/default.css" type="text/css">
 </head>
 
 <body>
-
+  <header>
+    <p>ヘッダー</p>
+    <p>ヘッダー</p>
+    <p>ヘッダー</p>
+  </header>
+  <article id="main1">
+    <h1>本文1</h1>
+    <p>ほんぶん1</p>
+    <p>ほんぶん1</p>
+   </article>
+  
+  <article id="main2">
+    <h1>本文2</h1>
+    <p>ほんぶん2</p>
+    <p>ほんぶん2</p>
+   </article>
+  
+  <aside>
+    <p>サイドバー</p>
+    <p>サイドバー</p>
+  </aside>
+  <footer>
+    <p>フッター</p>
+    <p>フッター</p>
+    <p>フッター</p>
+  </footer>
 </body>
 </html>
