--- a/index.html
+++ b/index.html
@@ -17,15 +17,18 @@
     <h1>本文1</h1>
     <p>ほんぶん1</p>
     <p>ほんぶん1</p>
+    <p>ほんぶん1</p>
    </article>
   
   <article id="main2">
     <h1>本文2</h1>
     <p>ほんぶん2</p>
     <p>ほんぶん2</p>
+    <p>ほんぶん2</p>
    </article>
   
   <aside>
+    <p>サイドバー</p>
     <p>サイドバー</p>
     <p>サイドバー</p>
   </aside>
