--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <p>ヘッダー</p>
     <p>ヘッダー</p>
   </header>
+ <secsion id="main">
   <article id="main1">
     <h1>本文1</h1>
     <p>ほんぶん1</p>
@@ -26,7 +27,8 @@
     <p>ほんぶん2</p>
     <p>ほんぶん2</p>
    </article>
-  
+ </secsion>
+   
   <aside>
     <p>サイドバー</p>
     <p>サイドバー</p>
