--- a/index.html
+++ b/index.html
@@ -15,18 +15,32 @@
   </header>
  <secsion id="main">
     <h1>本文</h1>
-  <article id="main1">
+  <article class="box">
     <h2>本文1</h2>
     <p>ほんぶん1</p>
     <p>ほんぶん1</p>
     <p>ほんぶん1</p>
    </article>
   
-  <article id="main2">
+  <article class="box">
     <h2>本文2</h2>
     <p>ほんぶん2</p>
     <p>ほんぶん2</p>
     <p>ほんぶん2</p>
+   </article>
+   
+   <article class="box">
+    <h2>本文3</h2>
+    <p>ほんぶん3</p>
+    <p>ほんぶん3</p>
+   </article>
+   
+   <article class="box">
+    <h2>本文4</h2>
+    <p>ほんぶん4</p>
+    <p>ほんぶん4</p>
+    <p>ほんぶん4</p>
+    <p>ほんぶん4</p>
    </article>
  </secsion>
    
