--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <p>ヘッダー</p>
     <p>ヘッダー</p>
   </header>
-   <secsion id="main">
+   <section id="main">
     <h1>本文</h1>
   <article class="box">
     <h2>本文1</h2>
@@ -42,7 +42,7 @@
     <p>ほんぶん4</p>
     <p>ほんぶん4</p>
    </article>
- </secsion>
+ </section>
    
   <aside>
     <p>サイドバー</p>
