--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   </header>
    <section id="main">
     <h1>本文</h1>
+    <img id="good-pic" src="T3A.gif" alt="bird mark">
   <article class="box">
     <h2>本文1</h2>
     <p>ほんぶん1</p>
